Rename Terminal Module to TerminalTable through the whole gem

--- a/History.rdoc
+++ b/History.rdoc
@@ -41,7 +41,7 @@
 
 === 1.0.3 / 2009-01-15
 
-* Moved yield or eval to Terminal::Table initialize where it belongs
+* Moved yield or eval to TerminalTable::Table initialize where it belongs
 
 === 1.0.0 / 2009-01-13
 
